// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Header component renders component with DCATD_LIST_REDIRECT_URL 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <Header
        className="header"
        size="small"
      >
        <a
          className="logo-link"
          href="http://portal/redirect-url"
        >
          <logo.svg
            className="logo"
          />
        </a>
        <span
          className="title"
        >
          Dataset beheer
        </span>
        
      </Header>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <a
            className="logo-link"
            href="http://portal/redirect-url"
          >
            <logo.svg
              className="logo"
            />
          </a>,
          <span
            className="title"
          >
            Dataset beheer
          </span>,
          "",
        ],
        "className": "header",
        "size": "small",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <logo.svg
              className="logo"
            />,
            "className": "logo-link",
            "href": "http://portal/redirect-url",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "logo",
            },
            "ref": null,
            "rendered": null,
            "type": "logo.svg",
          },
          "type": "a",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Dataset beheer",
            "className": "title",
          },
          "ref": null,
          "rendered": "Dataset beheer",
          "type": "span",
        },
        "",
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <Header
          className="header"
          size="small"
        >
          <a
            className="logo-link"
            href="http://portal/redirect-url"
          >
            <logo.svg
              className="logo"
            />
          </a>
          <span
            className="title"
          >
            Dataset beheer
          </span>
          
        </Header>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <a
              className="logo-link"
              href="http://portal/redirect-url"
            >
              <logo.svg
                className="logo"
              />
            </a>,
            <span
              className="title"
            >
              Dataset beheer
            </span>,
            "",
          ],
          "className": "header",
          "size": "small",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <logo.svg
                className="logo"
              />,
              "className": "logo-link",
              "href": "http://portal/redirect-url",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "logo",
              },
              "ref": null,
              "rendered": null,
              "type": "logo.svg",
            },
            "type": "a",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Dataset beheer",
              "className": "title",
            },
            "ref": null,
            "rendered": "Dataset beheer",
            "type": "span",
          },
          "",
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`The Header component renders component without DCATD_LIST_REDIRECT_URL 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <Header
        className="header"
        size="small"
      >
        <logo.svg
          className="logo"
        />
        <span
          className="title"
        >
          Dataset beheer
        </span>
        <button
          onClick={[Function]}
        >
          uitloggen
        </button>
      </Header>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <logo.svg
            className="logo"
          />,
          <span
            className="title"
          >
            Dataset beheer
          </span>,
          <button
            onClick={[Function]}
          >
            uitloggen
          </button>,
        ],
        "className": "header",
        "size": "small",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "logo",
          },
          "ref": null,
          "rendered": null,
          "type": "logo.svg",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Dataset beheer",
            "className": "title",
          },
          "ref": null,
          "rendered": "Dataset beheer",
          "type": "span",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "uitloggen",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "uitloggen",
          "type": "button",
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <Header
          className="header"
          size="small"
        >
          <logo.svg
            className="logo"
          />
          <span
            className="title"
          >
            Dataset beheer
          </span>
          <button
            onClick={[Function]}
          >
            uitloggen
          </button>
        </Header>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <logo.svg
              className="logo"
            />,
            <span
              className="title"
            >
              Dataset beheer
            </span>,
            <button
              onClick={[Function]}
            >
              uitloggen
            </button>,
          ],
          "className": "header",
          "size": "small",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "logo",
            },
            "ref": null,
            "rendered": null,
            "type": "logo.svg",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Dataset beheer",
              "className": "title",
            },
            "ref": null,
            "rendered": "Dataset beheer",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "uitloggen",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "uitloggen",
            "type": "button",
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
